# Registrationshop

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CTVisualization.py  DataModifier.py  INSTRUCTIONS.md  INSTRUCTIONS_UBUNTU.md  InspectionTool.py  LICENSE.md  LayerVisualization.py  MIPVis.py  MultiRenderWidget.py  Pipfile  README.md  RegistrationShop.py  RegistrationShop2.py  RenderWidget.py  VolumeProperty.py  decorators.py  environment.yml  killPython.sh  pyelastix.py  pyproject.toml  registrationshop.py  scripts.py
PyQtVTK/: BaseViewerStandard.py  RenderWindowInteractor.py
core/: AppResources.py  AppVars.py  Command.py  DataReader.py  ImageDataResizer.py  Operator.py  Project.py  ProjectController.py  Strategy.py  StrategyEdge.py  StrategyNode.py  Transformation.py  TransformationModel.py  Worker.py  __init__.py  decorators.py  operations.py  vtkDrawing.py  vtkObjectWrapper.py
core/data/: DataAnalyzer.py  DataController.py  DataReader.py  DataResizer.py  DataTransformer.py  DataWriter.py  __init__.py
core/elastix/: Elastix.py  ElastixCommand.py  Parameter.py  ParameterList.py  Parameters.py  (+4 more)
tests/: test_Command.py  test_DataReader.py  test_DataWriter.py  test_Elastix.py  test_ElastixCommand.py  test_ImageDataResizer.py  test_Operations.py  test_Operator.py  test_Parameter.py  test_ParameterList.py  test_Project.py  test_ProjectController.py  test_Strategy.py  test_StrategyEdge.py  test_StrategyNode.py  test_Transformation.py  test_TransformationList.py  test_VolumeProperty.py  test_Worker.py
ui/: ButtonContainer.py  ButtonContainerWidget.py  DataSetsWidget.py  Interactor.py  LandmarkTransformationTool.py  MainWindow.py  MultiRenderController.py  MultiRenderWidget.py  MultiVolumeVisualization.py  ParameterModel.py  ParameterWidget.py  QVTKRenderWindowInteractor.py  RenderController.py  RenderPropertyWidgets.py  RenderWidget.py  SlicerController.py  SlicerWidget.py  TitleWidget.py  TransformationListView.py  TransformationModel.py  TransformationParametersListView.py  TransformationTool.py  TransformationWidget.py  UserTransformationTool.py  VisualizationParametersWidget.py  VolumeProperty.py  VolumeVisualization.py  WindowDialog.py  __init__.py  interactor.py
(+146 files in other folders)
