[tool.poetry]
name = "registrationshop"
version = "0.1.0"
description = "3D registration tool for medical purposes"
authors = ["Berend Klein Haneveld <berendkleinhaneveld@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
PySide6 = "^6.2.1"
vtk = "^9.0.3"
PyYAML = "^5.4.1"
itk-elastix = "^0.12.0"
darkdetect = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-black = "*"
pytest = "*"

[tool.poetry.scripts]
registrationshop = 'scripts:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
