[tool.poetry]
name = "registrationshop"
version = "0.1.0"
description = "3D registration tool for medical purposes"
authors = ["Berend Klein Haneveld <berendkleinhaneveld@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pyside6-essentials = "^6.5.2"
vtk = "^9.2.5"
PyYAML = "*"
itk-elastix = "*"
darkdetect = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-black = "*"
pytest = "*"

[tool.poetry.scripts]
registrationshop = 'scripts:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
